@@ -1,12 +1,0 @@
-/*
- * Copyright 2014, General Dynamics C4 Systems
- *
- * SPDX-License-Identifier: GPL-2.0-only
- */
-
-#include <arch/user_access.h>
-
-void armv_init_user_access(void)
-{
-}
-
