@@ -17,9 +17,7 @@
 
 #ifdef CONFIG_ARCH_ARM
 static inline
-#ifndef CONFIG_ARCH_ARM_V6
 FORCE_INLINE
-#endif
 #endif
 void NORETURN fastpath_call(word_t cptr, word_t msgInfo)
 {
@@ -223,9 +221,7 @@ void NORETURN fastpath_call(word_t cptr, word_t msgInfo)
 
 #ifdef CONFIG_ARCH_ARM
 static inline
-#ifndef CONFIG_ARCH_ARM_V6
 FORCE_INLINE
-#endif
 #endif
 #ifdef CONFIG_KERNEL_MCS
 void NORETURN fastpath_reply_recv(word_t cptr, word_t msgInfo, word_t reply)
